--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,7 +30,7 @@
   /*Home Page*/
   .info-block {
     /*3 blocks, icon has 4 circles*/
-    @apply flex flex-col items-center text-center mx-std space-y-3 sm:mx-0;
+    @apply flex flex-col items-center justify-center text-center mx-std space-y-3 sm:mx-5;
   }
   .info-block img {
     @apply w-1/4;
@@ -39,26 +39,26 @@
     @apply text-5vw sm:text-2vw sm:my-5;
   }
   .info-block p {
-    @apply text-mobile-p sm:text-desktop-p;
+    @apply text-mobile-p sm:text-1.5vw sm:mx-8 leading-6;
   }
   .price-card {
     /*2 blue cards explaining price options*/
-    @apply h-auto grid grid-rows-price-cards gap-5 text-center w-11/12 sm:w-2/5 py-3 sm:hover:shadow-xl cursor-pointer bg-gradient-to-br from-lt-blue to-lt-teal rounded-md;
+    @apply h-auto grid grid-rows-price-cards gap-5 sm:gap-10 text-center w-11/12 sm:w-2/5 py-3 sm:hover:shadow-xl cursor-pointer bg-gradient-to-br from-lt-blue to-lt-teal rounded-md;
   }
   .price-card h2 {
-    @apply text-mobile-h sm:text-desktop-h;
+    @apply text-mobile-h sm:text-4vw;
   }
   .price-card p {
     @apply text-mobile-p sm:text-desktop-p;
   }
   .price-card ul {
-    @apply list-none space-y-3 my-5 mx-std;
+    @apply list-none space-y-3 my-5 mx-std sm:mx-6;
   }
   .price-card li {
     @apply flex items-center h-auto text-left;
   }
   .price-card li img {
-    @apply w-1/12 mr-6;
+    @apply w-1/12 mr-6 sm:w-6;
   }
   .price-card button {
     @apply w-11/12 bg-dk-black py-3 m-auto;
