--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
+#bottom-banner h1 {
+  text-align: center;
+  font-size: clamp(2em, 4vw, 11em);
+  line-height: 1.2;
+  margin: 0 7vw;
+  background: -webkit-linear-gradient(280deg, blue, #00ffff);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
