--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,23 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+@media (max-width: 500px) {
+  #bottom-banner h1 {
+    text-align: center;
+    font-size: 6vw;
+    line-height: 1.2;
+    padding: 10px 0;
+  }
+}
+#icons img {
+  width: 3vw;
+  min-width: 45px;
+  max-width: 50px;
+  margin-right: 25px;
+}
+#icons img:last-child {
+  margin-right: 0;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
