--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,35 +57,35 @@
   /*Home Page*/
   .info-block {
     /*3 blocks, icon has 4 circles*/
-    @apply h-full flex flex-col items-center justify-center text-center mx-std sm:mx-5;
+    @apply flex flex-col items-center justify-start text-center mx-std sm:mx-5 space-y-5 xl:space-y-8;
   }
   .info-block img {
     @apply w-1/4 sm:w-8vw;
   }
   .info-block h3 {
-    @apply text-5vw sm:text-2vw sm:my-5;
+    @apply text-6vw font-semibold sm:text-1.5vw md:text-xl lg:text-2vw;
   }
   .info-block p {
-    @apply text-mobile-p leading-10 sm:text-1.5vw sm:leading-4 md:leading-6 lg:mx-8% lg:leading-7 xl:leading-10;
+    @apply text-mobile-p leading-8 sm:text-1.5vw sm:leading-4 md:text-1.5vw md:leading-6 lg:mx-8% lg:text-xl xl:leading-8 xl:text-2xl;
   }
   .price-card {
     /*2 blue cards explaining price options*/
-    @apply h-auto grid grid-rows-price-cards gap-5 sm:gap-10 text-center w-11/12 py-3 sm:w-40vw sm:hover:shadow-xl cursor-pointer bg-gradient-to-br from-lt-blue to-lt-teal rounded-md;
+    @apply h-auto grid grid-rows-price-cards gap-5  text-center w-11/12 py-3 sm:w-40vw sm:hover:shadow-2xl cursor-pointer bg-gradient-to-br from-lt-blue to-lt-teal rounded-md;
   }
   .price-card h2 {
     @apply text-mobile-h sm:text-4vw;
   }
   .price-card p {
-    @apply text-mobile-p sm:text-desktop-p;
+    @apply text-mobile-p sm:text-desktop-p lg:text-1.5vw;
   }
   .price-card ul {
     @apply list-none space-y-3 my-5 mx-std sm:mx-6;
   }
   .price-card li {
-    @apply flex items-center h-auto text-left;
+    @apply flex items-center h-auto text-left lg:ml-8 sm:text-sm md:text-base lg:text-lg xl:text-xl;
   }
   .price-card li img {
-    @apply w-1/12 mr-6 sm:w-6;
+    @apply w-1/12 mr-6 sm:w-4 md:w-5 xl:w-6;
   }
   .price-card button {
     @apply w-11/12 bg-dk-black py-3 m-auto;
