--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,17 @@
+#page-one {
+  background-image: #ff0000;
+  background-image: radial-gradient(
+      at 40% 20%,
+      hsla(28, 100%, 74%, 1) 0,
+      transparent 50%
+    ),
+    radial-gradient(at 80% 0%, hsla(189, 100%, 56%, 1) 0, transparent 50%),
+    radial-gradient(at 0% 50%, hsla(355, 85%, 93%, 1) 0, transparent 50%),
+    radial-gradient(at 80% 50%, hsla(340, 100%, 76%, 1) 0, transparent 50%),
+    radial-gradient(at 0% 100%, hsla(22, 100%, 77%, 1) 0, transparent 50%),
+    radial-gradient(at 80% 100%, hsla(242, 100%, 70%, 1) 0, transparent 50%),
+    radial-gradient(at 0% 0%, hsla(343, 100%, 76%, 1) 0, transparent 50%);
+}
 #bottom-banner h1 {
   text-align: center;
   font-size: clamp(2em, 4vw, 11em);
