--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
-#page-one {
+/********** Home Page **************/
+#home_page-one-gradient {
   background: #ff0000;
   background-image: radial-gradient(
       at 40% 20%,
@@ -12,8 +13,7 @@
     radial-gradient(at 80% 100%, hsla(242, 100%, 70%, 1) 0, transparent 50%),
     radial-gradient(at 0% 0%, hsla(343, 100%, 76%, 1) 0, transparent 50%);
 }
-
-#bottom-banner h1 {
+#home_bottom-banner h1 {
   text-align: center;
   font-size: clamp(2em, 4vw, 11em);
   line-height: 1.2;
@@ -31,13 +31,13 @@
     padding: 10px 0;
   }
 }
-#icons img {
+#home_nav-icons img {
   width: 3vw;
   min-width: 45px;
   max-width: 50px;
   margin-right: 25px;
 }
-#icons img:last-child {
+#home_nav-icons img:last-child {
   margin-right: 0;
 }
 @tailwind base;
