--- a/styles/globals.css
+++ b/styles/globals.css
@@ -110,20 +110,20 @@ button {
   }
   /**** Price Plans Page ****/
   .column-1 {
-    @apply grid gap-8;
+    @apply grid gap-8 lg:gap-10;
   }
   .column-1 div {
-    @apply flex space-x-2 text-base ml-3 sm:ml-0 sm:text-base lg:text-xl xl:text-2xl font-semibold;
+    @apply flex items-center space-x-2 text-sm ml-3 sm:ml-0 sm:text-base lg:text-xl xl:text-2xl font-semibold;
   }
   .column-1 div img {
     @apply w-4 sm:w-4 lg:w-5 cursor-pointer;
   }
   .column-2,
   .column-3 {
-    @apply flex flex-col space-y-14 sm:space-y-8;
+    @apply flex flex-col space-y-14 sm:space-y-8 lg:space-y-10;
   }
   .column-2 div,
   .column-3 div {
-    @apply mx-auto text-base sm:text-lg lg:text-xl xl:text-2xl font-semibold;
+    @apply mx-auto text-sm sm:text-lg lg:text-xl xl:text-2xl font-semibold;
   }
 }
