--- a/styles/globals.css
+++ b/styles/globals.css
@@ -99,7 +99,7 @@ button {
 @layer components {
   /**** General ****/
   .btn {
-    @apply py-2 px-4 font-semibold bg-lt-clear backdrop-filter backdrop-blur-3xl backdrop-saturate-150 text-white rounded;
+    @apply py-2 px-4 lg:py-4 lg:px-6 font-semibold bg-lt-clear backdrop-filter backdrop-blur-3xl backdrop-saturate-150 text-white rounded;
   }
   .circle {
     @apply absolute rounded-full border-black border-8 filter blur-2xl sm:blur-3xl;
