--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,18 +14,15 @@ button {
 }
 /******* Home Page *********/
 #home_page-one-gradient {
-  background: #ff0000;
+  background-image: #ffffff;
   background-image: radial-gradient(
-      at 40% 20%,
-      hsla(28, 100%, 74%, 1) 0,
+      at 50% 99%,
+      hsla(242, 100%, 70%, 0.3) 0,
       transparent 50%
     ),
-    radial-gradient(at 80% 0%, hsla(189, 100%, 56%, 1) 0, transparent 50%),
-    radial-gradient(at 0% 50%, hsla(355, 85%, 93%, 1) 0, transparent 50%),
-    radial-gradient(at 80% 50%, hsla(340, 100%, 76%, 1) 0, transparent 50%),
-    radial-gradient(at 0% 100%, hsla(22, 100%, 77%, 1) 0, transparent 50%),
-    radial-gradient(at 80% 100%, hsla(242, 100%, 70%, 1) 0, transparent 50%),
-    radial-gradient(at 0% 0%, hsla(343, 100%, 76%, 1) 0, transparent 50%);
+    radial-gradient(at 59% 53%, hsla(0, 100%, 82%, 0.2) 0, transparent 50%),
+    radial-gradient(at 50% 39%, hsla(189, 100%, 56%, 0.3) 0, transparent 50%),
+    radial-gradient(at 38% 49%, hsla(343, 100%, 76%, 0.3) 0, transparent 50%);
 }
 #home_bottom-banner h1 {
   text-align: center;
