--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,9 +19,6 @@ button,
 span {
   font-family: "Source Sans Pro", "sans-serif";
 }
-.splash {
-  background: linear-gradient(110deg, #00beb3, #5653ff);
-}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -31,28 +28,28 @@ span {
     @apply antialiased;
   }
   section {
-    @apply max-w-screen-3xl max-h-3xl m-auto py-16;
+    @apply max-w-screen-3xl max-h-3xl m-auto py-16 md:py-20;
   }
   header {
     @apply max-w-screen-3xl left-0 right-0 m-auto;
   }
   h1 {
-    @apply text-4xl font-bold md:text-6xl 2xl:text-7xl;
+    @apply text-4xl font-bold md:text-6xl 2xl:text-7xl 3xl:text-8xl;
   }
   h2 {
-    @apply text-3xl font-bold md:text-5xl 2xl:text-6xl;
+    @apply text-3xl font-bold md:text-5xl 2xl:text-6xl 3xl:text-7xl;
   }
   h3 {
     @apply text-xl font-bold md:text-4xl 2xl:text-5xl;
   }
   h4 {
-    @apply text-xl font-bold lg:text-2xl;
+    @apply text-xl font-bold lg:text-2xl 2xl:text-3xl 3xl:text-4xl;
   }
   p {
-    @apply text-xl lg:text-2xl 3xl:text-3xl;
+    @apply text-xl lg:text-2xl 2xl:text-3xl 3xl:text-4xl;
   }
   button {
-    @apply text-lg rounded border-2 border-white w-40 py-2 md:text-xl md:w-48 md:py-3 2xl:text-2xl 2xl:w-60 2xl:py-4;
+    @apply text-lg rounded border-2 border-white w-40 py-2 md:text-xl md:w-48 md:py-3 2xl:text-2xl 2xl:w-60 2xl:py-4 3xl:text-3xl 3xl:w-72;
   }
 }
 @layer components {
