--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,13 +48,13 @@ span {
     @apply text-3xl font-bold md:text-4xl 2xl:text-5xl;
   }
   h4 {
-    @apply text-xl font-bold lg:text-2xl 2xl:text-3xl 3xl:text-4xl;
+    @apply text-xl font-bold 2xl:text-3xl 3xl:text-4xl;
   }
   h5 {
     @apply text-lg lg:text-xl 2xl:text-2xl;
   }
   p {
-    @apply text-xl 2xl:text-2xl 3xl:text-3xl;
+    @apply text-lg md:text-xl 2xl:text-2xl 3xl:text-3xl;
   }
   button {
     @apply text-lg rounded border-2 border-white w-40 py-2 md:text-xl md:w-48 md:py-3 2xl:text-2xl 2xl:w-60 2xl:py-4 3xl:text-3xl 3xl:w-72;
@@ -62,6 +62,6 @@ span {
 }
 @layer components {
   .wrapper {
-    @apply m-auto w-10/12 md:w-11/12 lg:w-10/12 max-w-screen-3xl;
+    @apply m-auto w-5/6 md:w-11/12 lg:w-10/12 max-w-screen-3xl;
   }
 }
