--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,25 +33,25 @@ span {
     @apply antialiased;
   }
   section {
-    @apply md:max-w-screen-3xl md:max-h-3xl m-auto py-16 md:py-20;
+    @apply md:max-w-screen-3xl md:max-h-3xl m-auto py-16 md:py-20 2xl:py-28;
   }
   header {
     @apply max-w-screen-3xl left-0 right-0 m-auto;
   }
   h1 {
-    @apply text-4xl font-bold md:text-6xl 2xl:text-7xl 3xl:text-8xl;
+    @apply text-4xl font-bold md:text-5xl lg:text-6xl 2xl:text-7xl 3xl:text-8xl;
   }
   h2 {
     @apply text-3xl font-bold md:text-5xl 2xl:text-6xl 3xl:text-7xl;
   }
   h3 {
-    @apply text-3xl font-bold md:text-4xl 2xl:text-5xl;
+    @apply text-3xl font-bold lg:text-4xl 2xl:text-5xl 3xl:text-6xl;
   }
   h4 {
     @apply text-xl font-bold 2xl:text-3xl 3xl:text-4xl;
   }
   h5 {
-    @apply text-lg lg:text-xl 2xl:text-2xl;
+    @apply text-lg lg:text-2xl 3xl:text-3xl;
   }
   p {
     @apply text-lg md:text-xl 2xl:text-2xl 3xl:text-3xl;
