--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,7 +51,7 @@ span {
     @apply text-xl font-bold 2xl:text-3xl 3xl:text-4xl;
   }
   h5 {
-    @apply text-lg lg:text-2xl 3xl:text-3xl;
+    @apply text-xl lg:text-2xl 3xl:text-3xl;
   }
   p {
     @apply text-lg md:text-xl 2xl:text-2xl 3xl:text-3xl;
