--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 
 /* Components */
 @import url("./components/gradient-box.css");
-
+@import url("./components/stripes.css");
 * {
   box-sizing: border-box;
 }
@@ -62,6 +62,6 @@ span {
 }
 @layer components {
   .wrapper {
-    @apply m-auto w-5/6 md:w-11/12 lg:w-10/12 max-w-screen-3xl;
+    @apply m-auto w-5/6 md:w-11/12 md:max-w-3xl lg:w-9/12 lg:max-w-screen-3xl;
   }
 }
