--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,34 +33,34 @@ span {
     @apply antialiased dark:bg-black;
   }
   section {
-    @apply md:max-w-screen-3xl m-auto py-16 md:py-20 2xl:py-28;
+    @apply md:max-w-screen-2xl m-auto py-16 md:py-20 2xl:py-28;
   }
   header {
-    @apply max-w-screen-3xl left-0 right-0 m-auto;
+    @apply max-w-screen-2xl left-0 right-0 m-auto;
   }
   h1 {
-    @apply text-4xl font-bold md:text-5xl lg:text-6xl 2xl:text-7xl 3xl:text-8xl dark:text-white;
+    @apply text-4xl font-bold md:text-5xl lg:text-6xl 2xl:text-7xl dark:text-white;
   }
   h2 {
-    @apply text-3xl font-bold md:text-5xl 2xl:text-6xl 3xl:text-7xl dark:text-white;
+    @apply text-3xl font-bold md:text-4xl lg:text-5xl 2xl:text-6xl dark:text-white;
   }
   h3 {
-    @apply text-3xl font-bold lg:text-4xl 2xl:text-5xl 3xl:text-6xl dark:text-white;
+    @apply text-3xl font-bold lg:text-4xl 2xl:text-5xl dark:text-white;
   }
   h4 {
-    @apply text-xl font-bold 2xl:text-3xl 3xl:text-4xl dark:text-white;
+    @apply text-xl font-bold 2xl:text-3xl dark:text-white;
   }
   h5 {
-    @apply text-xl lg:text-2xl 3xl:text-3xl dark:text-white;
+    @apply text-xl lg:text-2xl  dark:text-white;
   }
   h6 {
-    @apply text-lg lg:text-xl 3xl:text-2xl dark:text-white;
+    @apply text-lg lg:text-xl 2xl:text-3xl dark:text-white;
   }
   p {
-    @apply text-lg md:text-xl 2xl:text-2xl 3xl:text-3xl dark:text-white;
+    @apply text-lg md:text-xl 2xl:text-2xl dark:text-white;
   }
   button {
-    @apply text-lg rounded dark:border-2 dark:border-white min-w-min py-2 px-4 md:text-xl lg:px-6 2xl:text-2xl 2xl:py-3 3xl:text-3xl dark:text-white;
+    @apply text-lg rounded dark:border-2 dark:border-white min-w-min py-2 px-4 md:text-xl lg:px-6 2xl:text-2xl 2xl:py-3 dark:text-white;
   }
   a {
     @apply dark:text-white;
@@ -68,6 +68,6 @@ span {
 }
 @layer components {
   .wrapper {
-    @apply m-auto w-5/6 md:w-11/12 md:max-w-3xl lg:w-10/12 lg:max-w-screen-3xl;
+    @apply m-auto w-5/6 md:w-11/12 md:max-w-3xl lg:w-10/12 lg:max-w-screen-2xl;
   }
 }
