--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,7 +68,7 @@ button:focus {
     @apply text-lg md:text-xl 2xl:text-2xl dark:text-white;
   }
   button {
-    @apply text-lg rounded dark:border-2 dark:border-white min-w-min py-2 px-4 md:text-xl lg:px-6 2xl:text-2xl 2xl:py-3 dark:text-white;
+    @apply text-lg rounded min-w-min py-2 px-4 md:text-xl lg:px-6 2xl:text-2xl 2xl:py-3 dark:text-white;
   }
   a {
     @apply dark:text-white;
