--- a/styles/components/gradient-box.css
+++ b/styles/components/gradient-box.css
@@ -24,3 +24,30 @@
   border-radius: inherit; /* !important */
   background: linear-gradient(110deg, #00beb3, #5653ff);
 }
+
+.gradient-box-small {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+
+  background: white;
+  position: relative;
+
+  border: 4px;
+  background-clip: padding-box; /* !important */
+  border: solid 5px transparent; /* !important */
+  border-radius: 0.5em;
+}
+.gradient-box-small::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  margin: -2px; /* !important */
+  border-radius: inherit; /* !important */
+  background: linear-gradient(110deg, #00beb3, #5653ff);
+}
