--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,6 +39,9 @@ span {
   section {
     @apply md:max-w-screen-3xl m-auto py-16 md:py-20 2xl:py-28;
   }
+  .dashboard_section {
+    @apply md:max-w-screen-3xl m-auto py-6 md:py-8 2xl:py-14;
+  }
   header {
     @apply max-w-screen-3xl left-0 right-0 m-auto;
   }
@@ -70,5 +73,8 @@ span {
 @layer components {
   .wrapper {
     @apply m-auto w-5/6 md:w-11/12 md:max-w-3xl lg:w-10/12 lg:max-w-screen-2xl;
+  }
+  .dashboard_wrapper {
+    @apply w-11/12 m-auto;
   }
 }
