--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,4 +77,7 @@ span {
   .dashboard_wrapper {
     @apply w-11/12 m-auto;
   }
+  .dashboard_button {
+    @apply text-center cursor-pointer z-20 h-full text-sm;
+  }
 }
