--- a/styles/components/stripes.css
+++ b/styles/components/stripes.css
@@ -1,3 +1,9 @@
+/*
+*
+  This controls the stripe image on the home page. Highly advise leaving this alone.
+*
+*/
+
 .stripes {
   height: 100vh;
   width: 870px;
